# Balls-Bridge

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  bridge.py  graph.csv  requirements.txt  test.py
src/: bridge.cpp  controller.cpp  controller.hpp  fixed-speed-motor.cpp  fixed-speed-motor.hpp  motor.cpp  motor.hpp  state.hpp
test/: test-motor.cpp
